# AGENT_SEARCH

./: .pre-commit-config.yaml  DEVELOPER_UX_GUIDE.md  GIT_SETUP_GUIDE.md  MULTI_AGENT_ARCHITECTURE.md  Makefile  PIPELINE.md  README.md  README_INTERACTIVE.md  SPECIALIZED_AGENTS_ROADMAP.md  STANDARDS_DASHBOARD_GUIDE.md  UV_INTEGRATION.md  VSCODE_EXTENSION_GUIDE.md  WINDOWS_SETUP_GUIDE.md  cli.py  demo.py  modernize  multi_agent_demo.py  project_structure.md  pyproject.toml  requirements.txt  run_complete_workflow.py  run_real_demo.py  run_with_api.sh  sample_legacy_pipeline.py  ssh_key  ssh_key.pub  test_modernize  test_real_agent.py
baml/: main.baml
baml_src/: generators.baml  main.baml
docs/: README.md
docs/current/: DEVELOPER_UX_GUIDE.md  GIT_SETUP_GUIDE.md  MULTI_AGENT_ARCHITECTURE.md  README.md  UV_INTEGRATION.md  WINDOWS_SETUP_GUIDE.md  project_structure.md
docs/roadmap/: README.md  SPECIALIZED_AGENTS_ROADMAP.md  VSCODE_EXTENSION_GUIDE.md
examples/: ecommerce_test_pipeline.py  legacy_ecommerce_pipeline.py  sample_legacy_pipeline.py  simple_data_pipeline.py  simple_pipeline.py  usage_examples.py
hooks/: pre-commit-pipeline-check.py
legacy/: cli.py
output/: DEMO_complete_ecommerce_analysis.json  analysis_20250825_163235.json  analysis_20250825_163300.json  analysis_20250825_163919.json  analysis_20250825_164105.json  analysis_20250825_165608.json  analysis_examples_ecommerce_test_pipeline_20250825_173319.json  analysis_examples_legacy_ecommerce_pipeline_20250825_162640.json  architecture_analysis_test.json
output/enterprise_analysis/: enterprise_ecosystem_20250826_054835.json
output/enterprise_modernized/: enterprise_legacy_ecommerce_pipeline_20250826_054845.py
output/infrastructure/legacy_ecommerce_REAL/: cloudformation.yaml  deployment_guide.md  terraform.tf
output/orchestration/: orchestration_legacy_ecommerce_pipeline_20250826_050935.json  orchestration_legacy_ecommerce_pipeline_20250826_051439.json  orchestration_legacy_ecommerce_pipeline_20250826_052623.json
output/splitter_visualizations/: splitter_analysis_simple_data_pipeline_20250826_060944.html
output/transformed_code/: legacy_ecommerce_REAL_modernized.py  legacy_ecommerce_modernized.py
prototypes/: README.md  demo.py  interactive  multi_agent_demo.py  run_complete_workflow.py  run_real_demo.py
scripts/: commit-no-hooks.bat  commit-with-uv.bat  dev-commands.sh  disable-precommit.bat  fix-baml-windows.bat  fix-git-setup.bat  fix-git-setup.sh  fix-git-windows.bat  fix-precommit-config.bat  fix-precommit-windows.bat  setup-baml.sh  setup-prevention-tools.sh  setup.bat  setup.sh  start-dashboard.bat  start-dashboard.sh  troubleshoot-windows.bat
src/: __init__.py  cli.py  full_interactive_cli.py  interactive_cli.py  main.py  master_orchestrator.py  simple_cli.py
src/agent/: __init__.py  core.py
src/agents/: __init__.py  architecture_optimization.py  architecture_optimizer.py  code_transformation.py  enterprise_package.py  git_workflow.py  infrastructure.py  master_orchestrator.py  package_modernization.py  pipeline_intelligence.py  pr_review.py  prevention_mode.py  quality_assurance.py  splitter_analyzer.py  validation.py
src/aws_lambda/: __init__.py  optimizer.py
src/baml_client/baml_client/: __init__.py  async_client.py  async_request.py  globals.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
src/core/: template_aware_agent.py  template_registry.py
src/dashboard/: standards_dashboard.py
src/docs/: __init__.py  deprecation_detector.py  documentation_scraper.py  efficiency_analyzer.py
src/orchestrator/: __init__.py  master.py
src/repos/: __init__.py  custom_repo_connector.py
templates/: README.md
templates/airflow-template/: .template.json
templates/dbt-template/: .template.json
templates/enterprise/: README.md
templates/enterprise/tatami-solution-template/: .gitignore  .gitmodules  .vela.yml  CODEOWNERS  DEV.md  README.md  REPOSITORY_STRUCTURE.md  locals.tf  main.tf  output.tf  tatami.json
templates/enterprise/tatami-solution-template/.docs/: README.md  dockerfile  footer.md  gen.sh  header.md  terraform-docs.yml
templates/enterprise/tatami-solution-template/.scaffolding/: add.sh
templates/enterprise/tatami-solution-template/.scaffolding/solution/: variables.tf
templates/enterprise/tatami-solution-template/.snippets/: README.md  add.sh
templates/enterprise/tatami-solution-template/run/lambda/: .tags.json  TODO.md  dockerfile  main.py  payload.json  requirements.txt  trigger-debugger.sh  trigger-remote.sh  trigger.sh
templates/enterprise/tatami-solution-template/scripts/: rie.sh
templates/enterprise/tatami-solution-template/tests/run/: stop.sh
templates/enterprise/tatami-solution-template/tests/terraform/commands/: apply.sh  aws_configure.sh  destroy.sh  init.sh  plan.sh
templates/enterprise/tatami-solution-template/tests/terraform/config/: README.md
templates/prefect-template/: .template.json
tests/: test_agent.py
vscode-extension/: package.json
vscode-extension/src/: analyzer.ts  chatProvider.ts  codeLensProvider.ts  dashboardProvider.ts  extension.ts  hoverProvider.ts  modernizationService.ts  preventionModeProvider.ts  treeProvider.ts
(+2 files in other folders)
